--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     /* Month header */
     .month {
-        padding: 70px 25px;
+        padding: 40px 25px;
         width: 100%;
         background: #3873a3;
     }
@@ -125,7 +125,7 @@
     <li>13</li>
     <li>14</li>
     <li>15</li>
-    <li><span class="active">16  #1</span></li>
+    <li><span class="active">16 #1</span></li>
     <li>17</li>
     <li>18</li>
     <li>19</li>
@@ -134,6 +134,123 @@
     <li>22</li>
     <li>23</li>
     <li>24</li>
+    <li>25</li>
+    <li>26</li>
+    <li><span class="active">27 #2</span></li>
+    <li>28</li>
+    <li>29</li>
+    <li>30</li>
+    <li>31</li>
+  </ul>
+
+  <br>
+
+  <div class="month">
+    <ul>
+      <li class="prev">&#10094;</li>
+      <li class="next">&#10095;</li>
+      <li>
+        Fevereiro<br>
+        <span style="font-size:18px">2017</span>
+      </li>
+    </ul>
+  </div>
+
+  <ul class="weekdays">
+    <li>Dom</li>
+    <li>Seg</li>
+    <li>Ter</li>
+    <li>Qua</li>
+    <li>Qui</li>
+    <li>Sex</li>
+    <li>Sab</li>
+  </ul>
+
+  <ul class="days">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>5</li>
+    <li>6</li>
+    <li>7</li>
+    <li>8</li>
+    <li>9</li>
+    <li><span class="active">10 #3</span></li>
+    <li>11</li>
+    <li>12</li>
+    <li>13</li>
+    <li>14</li>
+    <li>15</li>
+    <li>16</li>
+    <li>17</li>
+    <li>18</li>
+    <li>19</li>
+    <li><span class="active">20 #4</span></li>
+    <li>21</li>
+    <li>22</li>
+    <li>23</li>
+    <li>24</li>
+    <li>25</li>
+    <li>26</li>
+    <li>27</li>
+    <li>28</li>
+  </ul>
+
+  <br>
+
+  <div class="month">
+    <ul>
+      <li class="prev">&#10094;</li>
+      <li class="next">&#10095;</li>
+      <li>
+        Março<br>
+        <span style="font-size:18px">2017</span>
+      </li>
+    </ul>
+  </div>
+
+  <ul class="weekdays">
+    <li>Dom</li>
+    <li>Seg</li>
+    <li>Ter</li>
+    <li>Qua</li>
+    <li>Qui</li>
+    <li>Sex</li>
+    <li>Sab</li>
+  </ul>
+
+  <ul class="days">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li><span class="active">4 #5</span></li>
+    <li>5</li>
+    <li>6</li>
+    <li>7</li>
+    <li>8</li>
+    <li>9</li>
+    <li>10</li>
+    <li>11</li>
+    <li>12</li>
+    <li>13</li>
+    <li>14</li>
+    <li>15</li>
+    <li>16</li>
+    <li>17</li>
+    <li><span class="active">18 #6</span></li>
+    <li>19</li>
+    <li>20</li>
+    <li>21</li>
+    <li>22</li>
+    <li>23</li>
+    <li><span class="active">24 #7</span></li>
     <li>25</li>
     <li>26</li>
     <li>27</li>
