--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
   <meta charset="UTF-8">
   <title>FS2W</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/status.css">
   <style>
-    a {
+    .pp a {
       color: #fff;
     }
-    a:hover {
+    .pp a:hover {
       color: #fff;
       text-decoration: None;
+    }
+    .logo {
+      height: 40px;
     }
   </style>
 </head>
@@ -23,108 +27,149 @@
 
 <img src="img/fs2w.png" alt="fs2w">
 
-<p>FS2W é uma série de workshops gratuitos sobre o desenvolvimento de aplicações web em Python. O objetivo é que ao final do programa você seja capaz de criar seu próprio projeto web do começo ao fim, e ainda deixar seu site no ar.</p>
+<br>
+<br>
+
+<p class="lead">FS2W é uma série de workshops gratuitos sobre o desenvolvimento de aplicações web em Python. O objetivo é que ao final do programa você seja capaz de criar seu próprio projeto web do começo ao fim, e ainda deixar seu site no ar.</p>
+
+<div class="row">
+  <div class="col-md-6">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ka-7E02YBaE" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <div class="col-md-6">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/2_ycq6BbQw4" frameborder="0" allowfullscreen></iframe>
+  </div>
+</div>
+
+<p class="lead">Acompanhe o <img src="https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/8/f/1/d/highres_454596637.jpeg" alt="" height="30px"> <a href="http://meetup.com/grupy-sp" target="_blank">Meetup.com/grupy-sp</a>.</p>
+
 
 <div class="panel panel-default">
   <div class="panel-body btn-black">
-    <img src="" alt="">
-    <a href=""><span class="leader">Linux</span></a>
+    <img class="logo pull-right" src="img/linux.jpg" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/linux.md" target="_blank"><span class="lead">Linux</span></a>
+    </div>
   </div>
 </div>
 
 <div class="panel panel-default">
   <div class="panel-body btn-red">
-    <img src="http://i.imgur.com/hvmrudL.jpg" alt="">
-    <a href=""><span>HTML e CSS básico</span></a>
+    <img class="logo pull-right" src="img/html_css.jpg" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/html-e-css-basico.md" target="_blank"><span class="lead">HTML e CSS básico</span></a>
+    </div>
   </div>
 </div>
 
 <div class="panel panel-default">
   <div class="panel-body btn-violet">
-    <img src="" alt="">
-    <a href=""><span class="lead">Introdução a Git</span></a>
+    <img class="logo pull-right" src="img/git.png" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/introducao-a-git.md" target="_blank"><span class="lead">Introdução a Git</span></a>
+    </div>
   </div>
 </div>
 
 <div class="panel panel-default">
   <div class="panel-body btn-yellow">
-    <img src="" alt="">
-    <a href=""><span class="leader">Noções de JavaScript, jQuery e Ajax</span></a>
+    <img class="logo pull-right" src="img/js_jquery_ajax.png" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/nocoes-de-javascript-jquery-ajax.md" target="_blank"><span class="lead">Noções de JavaScript, jQuery e Ajax</span></a>
+    </div>
   </div>
 </div>
 
 <div class="panel panel-default">
   <div class="panel-body btn-light-green">
-    <img src="" alt="">
-    <a href=""><span class="leader">Elm</span></a>
+    <img class="logo pull-right" src="img/elm.png" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/elm.md" target="_blank"><span class="lead">Elm</span></a>
+    </div>
   </div>
 </div>
 
 <div class="panel panel-default">
   <div class="panel-body btn-blue">
-    <img src="" alt="">
-    <a href=""><span class="leader">Mutirão Python</span></a>
+    <img class="logo pull-right" src="img/python2.png" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/mutirao-python.md" target="_blank"><span class="lead">Mutirão Python</span></a>
+    </div>
   </div>
 </div>
 
 <div class="panel panel-default">
   <div class="panel-body btn-violet">
-    <img src="" alt="">
-    <a href=""><span class="leader">Introdução ao PostgreSql</span></a>
+    <img class="logo pull-right" src="img/postgresql2.png" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/introducao-ao-postgresql.md" target="_blank"><span class="lead">Introdução ao PostgreSql</span></a>
+    </div>
   </div>
 </div>
 
 <div class="panel panel-default">
   <div class="panel-body btn-blue">
-    <img src="" alt="">
-    <a href=""><span class="leader">Web Scraping</span></a>
+    <img class="logo pull-right" src="img/web_scraper.png" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/web-scraping.md" target="_blank"><span class="lead">Web Scraping</span></a>
+    </div>
   </div>
 </div>
 
 <div class="panel panel-default">
   <div class="panel-body btn-black">
-    <img src="" alt="">
-    <a href=""><span class="leader">Flask na veia</span></a>
+    <img class="logo pull-right" src="img/flask2.png" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/flask-na-veia.md" target="_blank"><span class="lead">Flask na veia</span></a>
+    </div>
   </div>
 </div>
 
 <div class="panel panel-default">
   <div class="panel-body btn-green">
-    <img src="" alt="">
-    <a href=""><span class="leader">Overdose de Django</span></a>
+    <img class="logo pull-right" src="img/django.png" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/overdose-de-django.md" target="_blank"><span class="lead">Overdose de Django</span></a>
+    </div>
   </div>
 </div>
 
 <div class="panel panel-default">
   <div class="panel-body btn-violet">
-    <img src="" alt="">
-    <a href=""><span class="leader">Fazendo Deploy do seu projeto no Heroku</span></a>
+    <img class="logo pull-right" src="img/heroku.png" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/fazendo-deploy-do-seu-projeto-no-heroku.md" target="_blank"><span class="lead">Fazendo Deploy do seu projeto no Heroku</span></a>
+    </div>
   </div>
 </div>
 
 <div class="panel panel-default">
   <div class="panel-body btn-gray">
-    <img src="" alt="">
-    <a href=""><span class="leader">Api + Microservices</span></a>
+    <img class="logo pull-right" src="img/microservices.jpg" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/api-e-microservices.md" target="_blank"><span class="lead">Api + Microservices</span></a>
+    </div>
   </div>
 </div>
 
 <div class="panel panel-default">
   <div class="panel-body btn-dark-gray">
-    <img src="" alt="">
-    <a href=""><span class="leader">Testes e Integração Contínua</span></a>
+    <img class="logo pull-right" src="img/integ_cont.jpg" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/testes-e-integracao-continua.md" target="_blank"><span class="lead">Testes e Integração Contínua</span></a>
+    </div>
   </div>
 </div>
 
 <div class="panel panel-default">
   <div class="panel-body btn-blue">
-    <img src="" alt="">
-    <a href=""><span class="leader">Python & IOT</span></a>
+    <img class="logo pull-right" src="img/iot.png" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/iot.md" target="_blank"><span class="lead">Python & IOT</span></a>
+    </div>
   </div>
 </div>
 
-<p>Acompanhe o <a href="http://meetup.com/grupy-sp">Meetup.com/grupy-sp</a>.</p>
 </div>
 </body>
 </html>
-
