--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <div class="panel-body btn-black">
     <img class="logo pull-right" src="img/flask2.png" alt="">
     <div class="pp">
-      <a href="https://github.com/rg3915/fs2w/blob/master/flask-na-veia.md" target="_blank"><span class="lead">Flask na veia</span></a>
+      <a href="https://github.com/rg3915/fs2w/blob/master/flask.md" target="_blank"><span class="lead">Flask</span></a>
     </div>
   </div>
 </div>
@@ -129,7 +129,7 @@
   <div class="panel-body btn-green">
     <img class="logo pull-right" src="img/django.png" alt="">
     <div class="pp">
-      <a href="https://github.com/rg3915/fs2w/blob/master/overdose-de-django.md" target="_blank"><span class="lead">Overdose de Django</span></a>
+      <a href="https://github.com/rg3915/fs2w/blob/master/django.md" target="_blank"><span class="lead">Django</span></a>
     </div>
   </div>
 </div>
