Hot fix typo PostgreSQL

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div class="panel-body btn-violet">
     <img class="logo pull-right" src="img/postgresql2.png" alt="">
     <div class="pp">
-      <a href="https://github.com/rg3915/fs2w/blob/master/introducao-ao-postgresql.md" target="_blank"><span class="lead">Introdução ao PostgreSql</span></a>
+      <a href="https://github.com/rg3915/fs2w/blob/master/introducao-ao-postgresql.md" target="_blank"><span class="lead">Introdução ao PostgreSQL</span></a>
     </div>
   </div>
 </div>
