--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
   </div>
 </div>
 
-<p class="lead">Acompanhe o <img src="https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/8/f/1/d/highres_454596637.jpeg" alt="" height="30px"> <a href="http://meetup.com/grupy-sp" target="_blank">Meetup.com/grupy-sp</a>.</p>
+<p class="lead">Acompanhe o <img src="https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/8/f/1/d/highres_454596637.jpeg" alt="" height="30px"> <a href="http://meetup.com/grupy-sp" target="_blank">Meetup.com/grupy-sp</a></p>
+
+<p class="lead">Sugestões em <span class="fa fa-github"></span> <a href="https://github.com/rg3915/fs2w" target="_blank">github.com/rg3915/fs2w</a></p>
 
 
 <div class="panel panel-default">
