--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
   <div class="col-md-6">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/2_ycq6BbQw4" frameborder="0" allowfullscreen></iframe>
   </div>
+  <div class="col-md-6">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/T8KTf1VTvoE" frameborder="0" allowfullscreen></iframe>
+  </div>
 </div>
 
 <p class="lead">Acompanhe o <img src="https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/8/f/1/d/highres_454596637.jpeg" alt="" height="30px"> <a href="http://meetup.com/grupy-sp" target="_blank">Meetup.com/grupy-sp</a></p>
