Lógica de programação

--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
 </div>
 
 <div class="panel panel-default">
+  <div class="panel-body btn-dark-gray">
+    <img class="logo pull-right" src="https://images.alphacoders.com/546/546191.jpg" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/logica.md" target="_blank"><span class="lead">Lógica de Programação</span></a>
+    </div>
+  </div>
+</div>
+
+<div class="panel panel-default">
   <div class="panel-body btn-blue">
     <img class="logo pull-right" src="img/python2.png" alt="">
     <div class="pp">
