--- a/index.html
+++ b/index.html
@@ -50,15 +50,6 @@
 
 
 <div class="panel panel-default">
-  <div class="panel-body btn-black">
-    <img class="logo pull-right" src="img/linux.jpg" alt="">
-    <div class="pp">
-      <a href="https://github.com/rg3915/fs2w/blob/master/linux.md" target="_blank"><span class="lead">Linux</span></a>
-    </div>
-  </div>
-</div>
-
-<div class="panel panel-default">
   <div class="panel-body btn-red">
     <img class="logo pull-right" src="img/html_css.jpg" alt="">
     <div class="pp">
@@ -68,10 +59,28 @@
 </div>
 
 <div class="panel panel-default">
+  <div class="panel-body btn-black">
+    <img class="logo pull-right" src="img/linux.jpg" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/linux.md" target="_blank"><span class="lead">Introdução ao Linux</span></a>
+    </div>
+  </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-body btn-black">
+    <img class="logo pull-right" src="img/vim.svg" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/vim.md" target="_blank"><span class="lead">Introdução ao Vim</span></a>
+    </div>
+  </div>
+</div>
+
+<div class="panel panel-default">
   <div class="panel-body btn-violet">
     <img class="logo pull-right" src="img/git.png" alt="">
     <div class="pp">
-      <a href="https://github.com/rg3915/fs2w/blob/master/introducao-a-git.md" target="_blank"><span class="lead">Introdução a Git</span></a>
+      <a href="https://github.com/rg3915/fs2w/blob/master/introducao-a-git.md" target="_blank"><span class="lead">Introdução ao Git</span></a>
     </div>
   </div>
 </div>
