--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </div>
 
 <div class="panel panel-default">
-  <div class="panel-body btn-black">
+  <div class="panel-body btn-green">
     <img class="logo pull-right" src="img/vim.svg" alt="">
     <div class="pp">
       <a href="https://github.com/rg3915/fs2w/blob/master/vim.md" target="_blank"><span class="lead">Introdução ao Vim</span></a>
