--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
   <div class="panel-body btn-red">
     <img class="logo pull-right" src="img/html_css.jpg" alt="">
     <div class="pp">
-      <a href="https://github.com/rg3915/fs2w/blob/master/html-e-css-basico.md" target="_blank"><span class="lead">HTML e CSS básico</span>
-        <span class="pull-right"><a href="http://meetu.ps/356g6q" target="_blank">Confirmado 14/01/17 Meetup</a></span>
-      </a>
+      <a href="https://github.com/rg3915/fs2w/blob/master/html-e-css-basico.md" target="_blank"><span class="lead">HTML e CSS básico</span> </a>
+      <a href="http://meetu.ps/356g6q" target="_blank" class="pull-right">Confirmado 14/01/17 Meetup</a>
     </div>
   </div>
 </div>
