Meetup de Linux confirmado

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <img class="logo pull-right" src="img/html_css.jpg" alt="">
     <div class="pp">
       <a href="https://github.com/rg3915/fs2w/blob/master/html-e-css-basico.md" target="_blank"><span class="lead">HTML e CSS básico</span> </a>
-      <a href="http://meetu.ps/356g6q" target="_blank" class="pull-right">Confirmado 14/01/17 Meetup</a>
+      <a href="http://meetu.ps/356g6q" target="_blank" class="pull-right">Concluido 14/01/17 Meetup</a>
     </div>
   </div>
 </div>
@@ -64,6 +64,7 @@
     <img class="logo pull-right" src="img/linux.jpg" alt="">
     <div class="pp">
       <a href="https://github.com/rg3915/fs2w/blob/master/linux.md" target="_blank"><span class="lead">Introdução ao Linux</span></a>
+      <a href="http://meetu.ps/35pqQJ" target="_blank" class="pull-right">Confirmado 21/01/17 Meetup</a>
     </div>
   </div>
 </div>
