--- a/index.html
+++ b/index.html
@@ -70,10 +70,11 @@
 </div>
 
 <div class="panel panel-default">
-  <div class="panel-body btn-violet">
-    <img class="logo pull-right" src="img/git.png" alt="">
+  <div class="panel-body btn-yellow">
+    <img class="logo pull-right" src="img/js_jquery_ajax.png" alt="">
     <div class="pp">
-      <a href="https://github.com/rg3915/fs2w/blob/master/introducao-a-git.md" target="_blank"><span class="lead">Introdução ao Git</span></a>
+      <a href="https://github.com/rg3915/fs2w/blob/master/nocoes-de-javascript-jquery-ajax.md" target="_blank"><span class="lead">Noções de JavaScript, jQuery e Ajax</span></a>
+      <a href="" target="_blank" class="pull-right">Confirmado 09/02/17 Só falta o Meetup</a>
     </div>
   </div>
 </div>
@@ -83,15 +84,16 @@
     <img class="logo pull-right" src="img/vim.svg" alt="">
     <div class="pp">
       <a href="https://github.com/rg3915/fs2w/blob/master/vim.md" target="_blank"><span class="lead">Introdução ao Vim</span></a>
+      <a href="" target="_blank" class="pull-right">Confirmado 26/02/17 Só falta o Meetup</a>
     </div>
   </div>
 </div>
 
 <div class="panel panel-default">
-  <div class="panel-body btn-yellow">
-    <img class="logo pull-right" src="img/js_jquery_ajax.png" alt="">
+  <div class="panel-body btn-violet">
+    <img class="logo pull-right" src="img/git.png" alt="">
     <div class="pp">
-      <a href="https://github.com/rg3915/fs2w/blob/master/nocoes-de-javascript-jquery-ajax.md" target="_blank"><span class="lead">Noções de JavaScript, jQuery e Ajax</span></a>
+      <a href="https://github.com/rg3915/fs2w/blob/master/introducao-a-git.md" target="_blank"><span class="lead">Introdução ao Git</span></a>
     </div>
   </div>
 </div>
