--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     <img class="logo pull-right" src="img/html_css.jpg" alt="">
     <div class="pp">
       <a href="https://github.com/rg3915/fs2w/blob/master/html-e-css-basico.md" target="_blank"><span class="lead">HTML e CSS básico</span> </a>
-      <a href="http://meetu.ps/356g6q" target="_blank" class="pull-right">Concluido 14/01/17 Meetup</a>
+      <div class="pull-right">
+        <a href="http://meetu.ps/356g6q" target="_blank">Concluido 14/01/17 Meetup</a> - <a href="http://bit.ly/2kjMwxQ" target="_blank">Material aqui</a>
+      </div>
     </div>
   </div>
 </div>
