link do material de Linux

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
     <img class="logo pull-right" src="img/linux.jpg" alt="">
     <div class="pp">
       <a href="https://github.com/rg3915/fs2w/blob/master/linux.md" target="_blank"><span class="lead">Introdução ao Linux</span></a>
-      <a href="http://meetu.ps/35pqQJ" target="_blank" class="pull-right">Confirmado 21/01/17 Meetup</a>
+      <div class="pull-right">
+        <a href="http://meetu.ps/35pqQJ" target="_blank">Confirmado 21/01/17 Meetup</a> - <a href="http://bit.ly/2k8SWAf" target="_blank">Material aqui</a>
+      </div>
     </div>
   </div>
 </div>
