--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 
 <div class="panel panel-default">
   <div class="panel-body btn-yellow">
-    <img class="logo pull-right" src="img/js_jquery_ajax.png" alt="">
+    <img class="logo pull-right" src="img/js_jquery.png" alt="">
     <div class="pp">
-      <a href="https://github.com/rg3915/fs2w/blob/master/nocoes-de-javascript-jquery-ajax.md" target="_blank"><span class="lead">Noções de JavaScript, jQuery e Ajax</span></a>
+      <a href="https://github.com/rg3915/fs2w/blob/master/nocoes-de-javascript-jquery.md" target="_blank"><span class="lead">Noções de JavaScript e jQuery</span></a>
       <a href="" target="_blank" class="pull-right">Confirmado 09/02/17 Só falta o Meetup</a>
     </div>
   </div>
