--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <img class="logo pull-right" src="img/js_jquery.png" alt="">
     <div class="pp">
       <a href="https://github.com/rg3915/fs2w/blob/master/nocoes-de-javascript-jquery.md" target="_blank"><span class="lead">Noções de JavaScript e jQuery</span></a>
-      <a href="" target="_blank" class="pull-right">Confirmado 09/02/17 Só falta o Meetup</a>
+      <a href="http://meetu.ps/35R0yt" target="_blank" class="pull-right">Confirmado 09/02/17 Meetup</a>
     </div>
   </div>
 </div>
