--- a/index.html
+++ b/index.html
@@ -98,15 +98,7 @@
     <img class="logo pull-right" src="img/git.png" alt="">
     <div class="pp">
       <a href="https://github.com/rg3915/fs2w/blob/master/introducao-a-git.md" target="_blank"><span class="lead">Introdução ao Git</span></a>
-    </div>
-  </div>
-</div>
-
-<div class="panel panel-default">
-  <div class="panel-body btn-light-green">
-    <img class="logo pull-right" src="img/elm.png" alt="">
-    <div class="pp">
-      <a href="https://github.com/rg3915/fs2w/blob/master/elm.md" target="_blank"><span class="lead">Elm</span></a>
+      <a href="" target="_blank" class="pull-right">Confirmado 11/03/17 Só falta o Meetup</a>
     </div>
   </div>
 </div>
@@ -170,6 +162,15 @@
     <img class="logo pull-right" src="img/heroku.png" alt="">
     <div class="pp">
       <a href="https://github.com/rg3915/fs2w/blob/master/fazendo-deploy-do-seu-projeto-no-heroku.md" target="_blank"><span class="lead">Fazendo Deploy do seu projeto no Heroku</span></a>
+    </div>
+  </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-body btn-light-green">
+    <img class="logo pull-right" src="img/elm.png" alt="">
+    <div class="pp">
+      <a href="https://github.com/rg3915/fs2w/blob/master/elm.md" target="_blank"><span class="lead">Elm</span></a>
     </div>
   </div>
 </div>
