atualizando os links de vim e git

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <img class="logo pull-right" src="img/vim.svg" alt="">
     <div class="pp">
       <a href="https://github.com/rg3915/fs2w/blob/master/vim.md" target="_blank"><span class="lead">Introdução ao Vim</span></a>
-      <a href="" target="_blank" class="pull-right">Confirmado 26/02/17 Só falta o Meetup</a>
+      <a href="http://meetu.ps/36XGr4" target="_blank" class="pull-right">Confirmado 26/02/17 Meetup</a>
     </div>
   </div>
 </div>
@@ -98,7 +98,7 @@
     <img class="logo pull-right" src="img/git.png" alt="">
     <div class="pp">
       <a href="https://github.com/rg3915/fs2w/blob/master/introducao-a-git.md" target="_blank"><span class="lead">Introdução ao Git</span></a>
-      <a href="" target="_blank" class="pull-right">Confirmado 11/03/17 Só falta o Meetup</a>
+      <a href="http://meetu.ps/37nqPm" target="_blank" class="pull-right">Confirmado 11/03/17 Meetup</a>
     </div>
   </div>
 </div>
