--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
   <div id="div3" class="widget-head btn-yellow"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
-      <i class="fa fa- fa-2x"></i>
+      <img src="img/javascript_logo.svg" alt="" height="30px">
       <span class="lead">Noções de JavaScript e jQuery</span>
     </h4>
   </div><!-- /HEAD PANEL -->
@@ -194,7 +194,7 @@
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
   <div id="div4" class="widget-head btn-green"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
-      <i class="fa fa-vim fa-2x"></i>
+      <img src="img/vim_white_logo.png" alt="" height="30px">
       <span class="lead">Introdução ao Vim</span>
     </h4>
   </div><!-- /HEAD PANEL -->
@@ -294,7 +294,7 @@
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
   <div id="div6" class="widget-head btn-dark-gray"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
-      <i class="fa fa- fa-2x"></i>
+      <img src="img/brain.svg" alt="" height="30px">
       <span class="lead">Lógica de Programação</span>
     </h4>
   </div><!-- /HEAD PANEL -->
@@ -345,7 +345,7 @@
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
   <div id="div7" class="widget-head btn-blue"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
-      <i class="fa fa-python fa-2x"></i>
+      <img src="img/python_white_logo.png" alt="" height="30px">
       <span class="lead">Mutirão Python</span>
     </h4>
   </div><!-- /HEAD PANEL -->
@@ -395,7 +395,7 @@
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
   <div id="div8" class="widget-head btn-violet"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
-      <i class="fa fa- fa-2x"></i>
+      <img src="img/postgresql_white_logo.png" alt="" height="30px">
       <span class="lead">Introdução ao PostgreSQL</span>
     </h4>
   </div><!-- /HEAD PANEL -->
@@ -446,7 +446,7 @@
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
   <div id="div9" class="widget-head btn-blue"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
-      <i class="fa fa-web fa-2x"></i>
+      <img src="img/scrapy.png" alt="" height="30px">
       <span class="lead">Web Scraping</span>
     </h4>
   </div><!-- /HEAD PANEL -->
@@ -497,7 +497,7 @@
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
   <div id="div10" class="widget-head btn-black"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
-      <i class="fa fa- fa-2x"></i>
+      <img src="img/flask_logo.png" alt="" height="30px">
       <span class="lead">Flask</span>
     </h4>
   </div><!-- /HEAD PANEL -->
@@ -548,7 +548,7 @@
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
   <div id="div11" class="widget-head btn-green"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
-      <i class="fa fa- fa-2x"></i>
+      <img src="img/django_logo.png" alt="" height="30px">
       <span class="lead">Django</span>
     </h4>
   </div><!-- /HEAD PANEL -->
@@ -600,7 +600,7 @@
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
   <div id="div12" class="widget-head btn-violet"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
-      <i class="fa fa-heroku fa-2x"></i>
+      <img src="img/heroku_white_logo.png" alt="" height="30px">
       <span class="lead">Fazendo Deploy do seu projeto no Heroku</span>
     </h4>
   </div><!-- /HEAD PANEL -->
@@ -651,7 +651,7 @@
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
   <div id="div13" class="widget-head btn-light-green"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
-      <i class="fa fa- fa-2x"></i>
+      <img src="img/elm_logo.png" alt="" height="30px">
       <span class="lead">Elm</span>
     </h4>
   </div><!-- /HEAD PANEL -->
@@ -702,7 +702,7 @@
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
   <div id="div14" class="widget-head btn-gray"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
-      <i class="fa fa- fa-2x"></i>
+      <img src="img/micro-services.png" alt="" height="30px">
       <span class="lead">Api + Microservices</span>
     </h4>
   </div><!-- /HEAD PANEL -->
@@ -753,7 +753,6 @@
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
   <div id="div15" class="widget-head btn-dark-gray"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
-      <i class="fa fa- fa-2x"></i>
       <span class="lead">Testes e Integração Contínua</span>
     </h4>
   </div><!-- /HEAD PANEL -->
@@ -804,7 +803,7 @@
 <div class="widget widget-gray"> <!-- TYPE PANEL -->
   <div id="div16" class="widget-head btn-blue"> <!-- HEAD PANEL -->
     <h4 class="mytitle">
-      <i class="fa fa- fa-2x"></i>
+      <img src="img/iot_logo.png" alt="" height="30px">
       <span class="lead">Python & IOT</span>
     </h4>
   </div><!-- /HEAD PANEL -->
