--- a/index.html
+++ b/index.html
@@ -24,14 +24,22 @@
 <p class="lead">FS2W é uma série de workshops gratuitos sobre o desenvolvimento de aplicações web em Python. O objetivo é que ao final do programa você seja capaz de criar seu próprio projeto web do começo ao fim, e ainda deixar seu site no ar.</p>
 
 <div class="row">
-  <div class="col-md-6">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ka-7E02YBaE" frameborder="0" allowfullscreen></iframe>
+  <div class="col-md-4 col-sm-6 hero-feature">
+      <div class="thumbnail">
+        <iframe width="100%" src="https://www.youtube.com/embed/ka-7E02YBaE" frameborder="0" allowfullscreen></iframe>
+      </div>
   </div>
-  <div class="col-md-6">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/2_ycq6BbQw4" frameborder="0" allowfullscreen></iframe>
+
+  <div class="col-md-4 col-sm-6 hero-feature">
+      <div class="thumbnail">
+        <iframe width="100%" src="https://www.youtube.com/embed/2_ycq6BbQw4" frameborder="0" allowfullscreen></iframe>
+      </div>
   </div>
-  <div class="col-md-6">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/T8KTf1VTvoE" frameborder="0" allowfullscreen></iframe>
+
+  <div class="col-md-4 col-sm-6 hero-feature">
+      <div class="thumbnail">
+        <iframe width="100%" src="https://www.youtube.com/embed/T8KTf1VTvoE" frameborder="0" allowfullscreen></iframe>
+      </div>
   </div>
 </div>
 
